feat: 添加 梦想家/小伙伴 的数据库管理用例
